css header z-index fix

--- a/index.css
+++ b/index.css
@@ -59,7 +59,8 @@ header {
   /* background-color: var(--background-black); */
   background-color: var(--background-black-transparent);
   transition: all 0.5s ease-out;
-  z-index: 50;
+  z-index: 20;
+  /*   overflow-x: hidden; */
 }
 
 header.hide {
